<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Check updates</string>
    <string name="noNexus5">Warning! No Nexus 5 detected! This app is optimized for Nexus 5!</string>
    <string name="choose_color" tools:ignore="TypographyEllipsis">Choose color...</string>
    <string name="title_activity_settings" tools:ignore="TypographyEllipsis">Settings...</string>
    <string name="title_activity_update" tools:ignore="TypographyEllipsis">Check...</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_sys_info">System info</string>
    <string name="vers">Version</string>
    <string name="verifica">CHECK!</string>
    <string name="action_exit">Exit</string>
    <string name="opensources">Open Source Libraries</string>
    <string name="sysbartint">SystemBarTint</string>
    <string name="info_sysbartint" translatable="false">by jgilfelt</string>
    <string name="credits">Credits</string>
    <string name="made_by">Created by</string>
    <string name="my_name">Davide Maggio</string>
    <string name="add_shortcut">Add shortcuts</string>
    <string name="remove_shortcut">Remove shortcuts</string>
    <string name="settings">Settings</string>
    <string name="add_short_text">The shortcut %1$s has been added</string>
    <string name="curr_ver">Current version:</string>
    <string name="device_info_default">Unknown</string>
    <string name="model">Model number</string>
    <string name="device">Codename phone</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="product">Product</string>
    <string name="serial">Serial</string>
    <string name="ver_rel">Android version</string>
    <string name="ver_codename">Codename version</string>
    <string name="ver_incr">Incremental version</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="user">User</string>
    <string name="general_info">General infos</string>
    <string name="other_info">More infos</string>
    <string name="radio">Radio - Baseband version</string>
    <string name="id">ID - build number</string>
    <string name="holo_blue_light">Holo blue light</string>
    <string name="holo_blue_bright">Holo blue bright</string>
    <string name="holo_blue_dark">Holo blue dark</string>
    <string name="holo_green_light">Holo green light</string>
    <string name="holo_green_dark">Holo green dark</string>
    <string name="holo_red_light">Holo red light</string>
    <string name="holo_red_dark">Holo red dark</string>
    <string name="holo_purple">Holo purple</string>
    <string name="holo_orange_light">Holo orange light</string>
    <string name="holo_orange_dark">Holo orange dark</string>
    <string name="this_color">Current color is</string>
    <string name="nd">not yet avaible</string>
    <string name="welcome">Benvenuto!</string>
    <string name="set_ver_icon">Check icon preferences</string>
    <string name="curr_icon">Current icon is</string>
    <string name="hide_icon">Icon on launcher visible</string>
    <string name="no_add">Add shorcut on homescreen</string>
    <string name="hide_icon_toast_true">The icon is in the launcher</string>
    <string name="hide_icon_toast_false">The icon is not in the launcher</string>
    <string name="no_add_toast_true">The icon will be added on homescreen</string>
    <string name="no_add_toast_false">The icon will not be added on homescreen</string>
    <string name="cat_sel_icon">Icons Settings</string>
    <string name="select_icon" tools:ignore="TypographyEllipsis">Select icon...</string>
    <string name="prev">Preview:</string>
    <string-array name="empty_array"/>
    <string name="color_sett">Colors Settings</string>
    <string name="o_act_bar">Apply color only on action bar</string>
    <string name="enable_random_color">Enable random colors</string>
    <string name="enable_random_color_summary">Enable random colors at every startup of the app</string>
    <string name="enable_random_color_act">Enable random colors in activities</string>
    <string name="enable_random_color_act_summary">Enable random colors in every activity</string>


    <string name="title_version_text">Version Name</string>
    <string name="title_version_num">Version Number</string>
    <string name="title_version_letter">Version Letter</string>
    <string name="title_clicks_int">Maximum Clicks</string>
    <string name="title_freq">Frequency of special pastries</string>
    <string name="let_interpol">Letter Interpolator</string>
    <string name="title_anim_int">Animation Duration</string>
    <string name="anim_acc">Accelerate</string>
    <string name="def_anim">Decelerate</string>
    <string name="anim_acc_dec">Accelerate + Decelerate</string>
    <string name="anim_ant">Anticipate</string>
    <string name="anim_ove">Overshoot</string>
    <string name="anim_ant_ov">Anticipate + Overshoot</string>
    <string name="anim_lin">Linear</string>
    <string name="anim_bounce">Bounce</string>
    <string name="interpolator_ch">Choose an interpolator for the rotating text</string>
    <string name="sys_ui_mode_tit_kk">Choose System UI mode for the Android KitKat platlogo</string>
    <string name="sys_ui_mode_tit_l">Choose System UI mode for the Android L platlogo</string>


    <string name="default_jb_text_1" translatable="false">Android 4.3</string>
    <string name="default_jb_text_2" translatable="false">JELLY BEAN</string>

    <string name="none">Normal</string>
    <string name="immerge">Immersive Mode</string>
    <string name="translucent">Translucent Mode</string>
    <string name="sysui">System UI mode</string>
    <string name="sysui_plat">System UI mode (in the platlogo)</string>
    <string name="restart">Restart</string>
    <string name="warn">WARNING!</string>
    <string name="module_ok">HAVE BEEN DETECTED SOME XPOSED MODULES WHICH MODIFY THE COLOR OF THE STATUS BAR. THESE CAN JOIN IN CONFLICT WITH THIS APP.</string>

    <string name="title_checking">Check updates for this app!</string>
    <string name="checking">Checking...</string>
    <string name="no_upds">No updates available!</string>
    <string name="yes_up_not">Update available!\nClick here for download!</string>
    <string name="upd_yes">Update available!\n\nCurrent code version is %1$s, available %2$s.\n\n\nDownload it now?</string>
    <string name="no_int">Please turn on Wi-Fi or mobile data.</string>
    <string name="no_auto_upd">Enable auto updates</string>
    <string name="cat_up">Update settings</string>

    <string name="alpha_beta">WARNING!\nThe available version is in %1$s, would you download it?</string>
    <string name="old_ver">WARNING!\nAn old version of the app is installed. Removal is required.</string>
    <string name="choose_platlogo">Choose Android L/Lollipop Platlogo</string>
    <string name="mod_copy">Copying Mode</string>
    <string name="what_mod_copy">Click on an information to copy the contents in clipboard</string>
    <string name="action_info">Info</string>
    <string name="title_jb_int">Number of Beans</string>
    <string name="clipboard_message">Copied to clipboard:</string>
    <string name="nineoldandroids_by">by JakeWharton</string>
    <string name="nineoldandroids">NineOldAndroids</string>
    <string name="fab_by">by futuresimple</string>
    <string name="fab">Android-Floating-Action-Button</string>
    <string name="snack_bar">SnackBar</string>
    <string name="snack_bar_by">by MrEngineer13</string>
    <string name="xposed_eggster">Xposed Module - by jamaal areeb</string>
</resources>