<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/cat_sel_icon">

        <ListPreference
            android:defaultValue="3"
            android:dialogIcon="@drawable/ic_menu_manage"
            android:dialogLayout="@layout/icon_sel"
            android:enabled="true"
            android:entries="@array/listArrayicons"
            android:entryValues="@array/listValuesicons"
            android:key="select_icons"
            android:summary="@android:string/unknownName"
            android:title="@string/select_icon"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/set_ver_icon">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_icon"
            android:summaryOff="@string/hide_icon_toast_true"
            android:summaryOn="@string/hide_icon_toast_false"
            android:title="@string/hide_icon"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="no_add"
            android:summaryOff="@string/no_add_toast_false"
            android:summaryOn="@string/no_add_toast_true"
            android:title="@string/no_add"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/color_sett">

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="random_colors"
            android:selectable="true"
            android:summary="@string/enable_random_color_summary"
            android:title="@string/enable_random_color"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="random_colors_act"
            android:selectable="true"
            android:summary="@string/enable_random_color_act_summary"
            android:title="@string/enable_random_color_act"/>

    </PreferenceCategory>

</PreferenceScreen>
