<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="general_info"
        android:title="@string/general_info">

        <Preference
            android:key="model"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/model"/>

        <Preference
            android:key="manufacturer"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/manufacturer"/>

        <Preference
            android:key="hardware"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Hardware"/>

        <Preference
            android:key="device"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/device"/>

        <Preference
            android:key="product"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/product"/>

        <Preference
            android:key="release"
            android:selectable="true"
            android:summary="@android:string/unknownName"
            android:title="@string/ver_rel"/>

        <Preference
            android:key="id"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/id"/>

        <Preference
            android:key="api"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="API"/>

        <Preference
            android:key="codename"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/ver_codename"/>

        <Preference
            android:key="incremental"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/ver_incr"/>

        <Preference
            android:key="fingerprint"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Fingerprint"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="root_info"
        android:title="ROOT">

        <Preference
            android:key="root"
            android:maxLines="1"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Root"/>

        <Preference
            android:key="xposed"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Xposed Framework"/>

        <Preference
            android:key="busybox"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Busybox"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="other_info"
        android:title="@string/other_info">

        <Preference
            android:key="bootloader"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Bootloader"/>

        <Preference
            android:key="board"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Board"/>

        <Preference
            android:key="cpu"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="CPU"/>

        <Preference
            android:key="display"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Display"/>

        <Preference
            android:key="kernel"
            android:summary="@android:string/unknownName"
            android:title="Kernel"/>

        <Preference
            android:key="host"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Host"/>


        <Preference
            android:key="radio"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/radio"/>

        <Preference
            android:key="serial"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/serial"/>

        <Preference
            android:key="tags"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="Tags"/>

        <Preference
            android:key="time"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/time"/>

        <Preference
            android:key="type"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/type"/>

        <Preference
            android:key="user"
            android:selectable="false"
            android:summary="@android:string/unknownName"
            android:title="@string/user"/>

    </PreferenceCategory>

</PreferenceScreen>