<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.dvd.android.updatechecker.InfoActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="1"
        android:showAsAction="withText"
        android:title="@string/add_shortcut"/>

    <item
        android:id="@+id/action_remove"
        android:orderInCategory="2"
        android:showAsAction="withText"
        android:title="@string/remove_shortcut"/>

    <item
        android:id="@+id/sys_info"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="4"
        android:showAsAction="always|withText"
        android:title="@string/title_activity_sys_info"/>

    <item
        android:id="@+id/sett"
        android:icon="@android:drawable/ic_menu_manage"
        android:showAsAction="always|withText"
        android:title="@string/settings"/>


</menu>
